[package]
name = "laszip"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
categories = ["compression", "external-ffi-bindings", "science"]
description = "Bindings to laszip"
repository = "https://github.com/gadomski/laszip-rs"
documentation = "https://docs.rs/laszip"
homepage = "https://github.com/gadomski/laszip-rs"
readme = "README.md"
keywords = ["lidar", "laszip", "las", "pointcloud"]
license = "MIT"

[dependencies]
laszip-sys = { path = "laszip-sys" }
lazy_static = "0.2"
quick-error = "1.2"

[workspace]
members = ["laszip-sys"]
