[package]
name = "laszip-sys"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
categories = ["compression", "external-ffi-bindings", "science"]
description = "Low level bindings to laszip"
repository = "https://github.com/gadomski/laszip-sys"
documentation = "https://docs.rs/laszip-sys"
homepage = "https://github.com/gadomski/laszip-sys"
readme = "README.md"
keywords = ["lidar", "laszip", "las", "pointcloud"]
license = "MIT"
links = "laszip"

[build-dependencies]
bindgen = "0.30"

[dev-dependencies]
tempfile = "2.2"
